# Account-Bookkeeping

./: .gitignore  Agent Meta Instruction.md  Code Review.md  Next Steps.md  PRD for Singapore Small Business Bookkeeping Application (o4).md  README.md  Technical_Design_Specification_Document (v12).md  Technical_Design_Specification_Document.md  code_files_enclosed_set-3.md  code_review.md  create_database_schema (reference).md  currect_project_file_structure.txt  deployment_guide.md  errors.txt  extract_code_files.py  model_response_to_change_change_request_big.md  next_phase_detailed_plan.md  next_phase_project_plan.md  next_phase_v2_execution_plan.md  next_step.md  next_step_after_database_created.md  notes_poetry.md  oo1  please_review_code_files_enclosed.md  project_codebase_files_set-1.md  project_codebase_files_set-2.md  project_codebase_files_set-3.md  project_codebase_files_set-4.md  project_codebase_files_set-5.md  project_codebase_files_set-6.md  project_codebase_files_set-7.md  project_codebase_files_set-8.md  project_codebase_files_set_last_updated_for_your_careful_review.md  project_codebase_scripts_files.md  project_codebase_tests_files.md  project_codebase_updated_files_set-new.md  project_file_structure.txt  pyproject.toml  schema_update_patch.sql  tips.txt
app/: __init__.py  main.py  resources_rc.py
app/accounting/: __init__.py  chart_of_accounts_manager.py  currency_manager.py  fiscal_period_manager.py  journal_entry_manager.py
app/business_logic/: __init__.py  bank_account_manager.py  bank_transaction_manager.py  customer_manager.py  payment_manager.py  product_manager.py  purchase_invoice_manager.py  sales_invoice_manager.py  vendor_manager.py
app/common/: enums.py
app/core/: application_core.py  config_manager.py  database_manager.py  module_manager.py  security_manager.py
app/models/: __init__.py  account.py  account_type.py  budget.py  company_setting.py  currency.py  customer.py  exchange_rate.py  fiscal_period.py  fiscal_year.py  gst_return.py  journal_entry.py  product.py  recurring_pattern.py  tax_code.py  user.py  vendor.py
app/reporting/: __init__.py  report_engine.py  (+3 more)
docs/: README_v10.md  System_Prompt.md  Technical_Design_Specification_Document_v12.md  database.md  error.txt  prompt_to_create.md  prompt_to_fix.md  prompt_to_fix_2.md  prompt_to_fix_3.md  prompt_to_fix_4.md
new/: list_of_newly_added_and_modified_files.txt  pyproject.toml
resources/: resources.qrc
scripts/: db_init.py  initial_data.sql  schema.sql
ttt2/: oo1
(+82 files in other folders)
